<resources>
    <string name="app_name">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="_085998776554">085998776554</string>
    <string name="contact">Contact</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="lamongan_jatim">Lamongan JATIM</string>
    <string name="alamat">Alamat</string>
    <string name="abdul">Abdul Mufid</string>
    <string name="full_name">Full Name</string>
    <string name="indonesia">Indonesia</string>
    <string name="todo">TODO</string>
    <string name="_21k">21K</string>

    <string name="mufid">Mufid</string>
    <string name="abdul_mufid">Abdul Mufid</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="profil">Profil</string>
</resources>