<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_profil"
    android:orientation="vertical">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="#ff6b00">

    <ImageView
        android:id="@+id/we"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/we"
        android:layout_centerVertical="true"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abdul_mufid"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/we"
        android:layout_marginStart="10dp"
        android:includeFontPadding="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mufid"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:layout_toEndOf="@+id/we"
        android:layout_below="@+id/full_name" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="-100dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ff6b00"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/person"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_21k"
                    android:textSize="20sp"
                    android:includeFontPadding="false"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ff6b00"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/lokasi"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indonesia"
                    android:textSize="20sp"
                    android:includeFontPadding="false"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/abdul_mufid"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/lamongan_jatim"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jenis_kelamin">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/laki_laki"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/_085998776554"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff6b00"
            android:text="@string/edit"
            android:textColor="#263238" />

    </LinearLayout>


</LinearLayout>